--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
 html, body {
     width: 100vw;
 }
+
+#main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+}
+
+#survey-form {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+}
