--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ html, body {
 }
 
 #survey-form {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,5 +18,9 @@ html, body {
 }
 
 .text-input {
+    width: 100%;
+}
+
+.input-container {
     width: 100%;
 }
