--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@
     padding: .8em .5em;
     background-color: #54361c;
     font-family: 'Roboto', sans-serif;
+    color: #54361c;
+    font-size: 1.2em;
 }
 
 
 #main {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,15 +20,23 @@
 }
 
 #survey-form {
+    width: 100%;
+    max-width: 720px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
+    border: 2px solid #54361c;
+    border-radius: 7px;
     padding: .85em;
 }
 
 .text-input {
     width: 100%;
+    background-color: #fefacd;
+    border: 1px solid #54361c;
+    border-radius: 3px;
+    height: 2.5rem;
+    margin: 1em 0;
 }
 
 .input-container {
@@ -46,16 +55,23 @@
 
 #title {
     color: #54361c;
-    font-size: 2em;
+    font-size: 2.2em;
     font-family: 'Pacifico', cursive;
+    padding: .75em 0;
+    text-align: center;
 }
 
-.title-orange {
+.orange {
     color: #d5731c;
 }
 
-.title-yellow {
+.yellow {
     color: #ffb949;
+}
+
+#description {
+    font-size: 1.5em;
+    padding-bottom: .5em;
 }
 
 
