--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     font-size: 1.2em;
 }
 
+.main-container {
+    display: flex; 
+    justify-content: center;
+}
+
 
 #main {
     display: flex;
@@ -15,19 +20,22 @@
     background-color: #fefacd;
     border-radius: 7px;
     padding: 1em;
+    max-width: 720px;
+    flex: 1;
+    
     
     
 }
 
 #survey-form {
-    width: 100%;
-    max-width: 720px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 2px solid #54361c;
     border-radius: 7px;
     padding: .85em;
+    flex: 1;
 }
 
 .text-input {
