--- a/styles.css
+++ b/styles.css
@@ -10,39 +10,35 @@
 .main-container {
     display: flex; 
     justify-content: center;
+    
 }
 
 
 #main {
+    width: 100%;
+    max-width: 720px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #fefacd;
     border-radius: 7px;
-    padding: 1em;
-    max-width: 720px;
-    flex: 1;
-    
-    
-    
+    padding: 1em;  
 }
 
 #survey-form {
-    
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #54361c;
-    border-radius: 7px;
     padding: .85em;
-    flex: 1;
+    
 }
 
 .text-input {
     width: 100%;
     background-color: #fefacd;
-    border: 1px solid #54361c;
-    border-radius: 3px;
+    border: 2px solid #d5731c;
+    border-radius: 15px;
     height: 2.5rem;
     margin: 1em 0;
 }
