--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@
     background-color: #54361c;
     font-family: 'Roboto', sans-serif;
     color: #54361c;
-    font-size: 1.2em;
+    
 }
+
+label, p {
+    font-size: 1.5em;
+}
+
 
 .main-container {
     display: flex; 
@@ -59,7 +64,7 @@
 
 #title {
     color: #54361c;
-    font-size: 2.2em;
+    font-size: 2.8em;
     font-family: 'Pacifico', cursive;
     padding: .75em 0;
     text-align: center;
@@ -74,9 +79,12 @@
 }
 
 #description {
-    font-size: 1.5em;
+    font-size: 1.8em;
     padding-bottom: .5em;
 }
 
-
-
+.radio {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+}
